    - Fix switched arguments on memset in the implementation of tor_munmap()
      for systems with no mmap() call.
    - When Tor receives a router descriptor that it asked for, but no longer
      wants (because it has received fresh networkstatuses in the meantime),
      do not warn the user.  Cache the descriptor if we're a cache; drop it
      if we aren't.

  o Minor features (controller):
    - Warn the user when an application uses the obsolete binary v0
      control protocol.  We're planning to remove support for it during
      the next development series, so it's good to give people some
      advance warning.
    - Add STREAM_BW events to report per-entry-stream bandwidth use. (Patch
      from Robert Hogan.)
    - Rate-limit SIGNEWNYM events in response to controllers that impolitely
      generate them for every single stream.  (Patch from mwenge; closes bug
      394.)

  o Minor bugfixes (performance):
    - Call router_have_min_dir_info half as often.  (This is showing up in
      some profiles, but not others.)
    - When using GCC, make log_debug and never get called at all, and its
      arguments never get evaluated, when no debug logs are configured.
      (This is showing up in some profiles, but not others.)

  o Minor features:
    - Remove some never-implemented options.  Mark PathlenCoinWeight as
      obsolete.
    - Implement proposal 106: Stop requiring clients to have well-formed
      certificates; stop checking nicknames in certificates.  (Clients have
      certificates so that they can look like Tor servers, but in the future
      we might want to allow them to look like regular TLS clients instead.
      Nicknames in certificates serve no purpose other than making our
      protocol easier to recognize on the wire.)
    - Revise messages on handshake failure again to be even more clear about
      which are incoming connections and which are outgoing.
    - Discard any v1 directory info that's over 1 month old (for